@@ -1,4 +1,5 @@
 [1.9.3]
+- Updated iOS native build scripts to iOS 9.3 and TVOS 9.2
 - API Addition: GestureDetector#pinchStop() called when no longer pinching
 - API Addition: Gdx.graphics.setUndecorated/setResizable API added to Graphics https://github.com/libgdx/libgdx/pull/3847
 - API Addition: Gdx.graphics.getGLVersion(), grab the GL version and implementation type. https://github.com/libgdx/libgdx/pull/3788
